add section two

--- a/css/main.css
+++ b/css/main.css
@@ -149,3 +149,176 @@ body {
 .hero__link:hover {
     background-color: #66D2CF;
 }
+
+.container--collection {
+    margin-top: 136px;
+    padding-left: 106px;
+
+}
+
+.collection {
+    width: 1111px;
+    height: 524.55px;
+    margin-bottom: 188px;
+    background-image: url(../images/our-collection.png);
+    background-repeat: no-repeat;
+
+}
+
+.collection__list {
+    width: 1111px;
+    display: flex;
+    list-style-type: none;
+
+
+
+}
+
+.collection__item {
+    position: relative;
+    top: 120px;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.collection__item--item2 {
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+
+.collection__item--item3 {
+    margin-right: 51px;
+}
+
+.collection__img {
+    margin: 0 auto 71px;
+    width: 255px;
+    height: 190px;
+    display: flex;
+
+
+}
+
+
+
+.collection__title {
+    margin-bottom: 24px;
+    font-family: 'Fraunces';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    text-align: center;
+    color: #333D4B;
+}
+
+.collection__text {
+
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    /* or 162% */
+    text-align: center;
+    color: #333D4B;
+}
+
+.choose-us {
+    width: 1280px;
+    height: 577px;
+    background: #2C343E;
+    border-radius: 10px;
+}
+
+.choose-us__block {
+    width: 540px;
+    height: 160px;
+    margin: 0 auto;
+    padding-top: 110px;
+}
+
+.choose-us__title {
+    font-family: 'Fraunces';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 48px;
+    /* identical to box height, or 120% */
+    text-align: center;
+    color: #FEFCF7;
+}
+
+.choose-us__text {
+    margin-top: 32px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    /* or 162% */
+    text-align: center;
+    color: #FEFCF7;
+    opacity: 0.8;
+}
+
+.product {
+    padding-left: 95px;
+}
+
+.product__list {
+    position: relative;
+    bottom: 240px;
+    list-style: none;
+    display: flex;
+}
+
+.product__item {
+    width: 350px;
+    height: 382px;
+    padding: 0 45px;
+    background: #0E8784;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.product__item--item2{
+    margin: 0 30px;
+}
+
+.product__img {
+    width: 71px;
+    height: 71px;
+    display: flex;
+    margin: 72px 0 56px;
+}
+
+.product__title {
+    font-family: 'Fraunces';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    text-align: center;
+    color: #FEFCF7;
+
+}
+
+.product__text {
+    margin-top: 24px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    /* or 162% */
+    text-align: center;
+    color: #FEFCF7;
+}
