--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,8 @@ body {
     color: #333D4B;
 }
 
+/* header end  */
+
 .hero {
     background-image: url(../images/header-back.png);
     width: 1280px;
@@ -131,7 +133,7 @@ body {
     margin-bottom: 56px;
 }
 
-.hero__link {
+.button__link {
     background-color: #0E8784;
     border-radius: 6px;
     padding: 15px 31px 16px;
@@ -146,9 +148,11 @@ body {
     color: #FEFCF7;
 }
 
-.hero__link:hover {
+.button__link:hover {
     background-color: #66D2CF;
 }
+
+/* section1 end  */
 
 .container--collection {
     margin-top: 136px;
@@ -167,6 +171,8 @@ body {
 
 .collection__list {
     width: 1111px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style-type: none;
 
@@ -178,8 +184,15 @@ body {
     position: relative;
     top: 120px;
     width: 250px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 
 }
@@ -198,6 +211,8 @@ body {
     margin: 0 auto 71px;
     width: 255px;
     height: 190px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
 
@@ -228,6 +243,8 @@ body {
     text-align: center;
     color: #333D4B;
 }
+
+/* section2 end  */
 
 .choose-us {
     width: 1280px;
@@ -275,6 +292,8 @@ body {
     position: relative;
     bottom: 240px;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -284,17 +303,27 @@ body {
     padding: 0 45px;
     background: #0E8784;
     border-radius: 8px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
-.product__item--item2{
+
+.product__item--item2 {
     margin: 0 30px;
 }
 
 .product__img {
     width: 71px;
     height: 71px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 72px 0 56px;
 }
@@ -321,4 +350,227 @@ body {
     /* or 162% */
     text-align: center;
     color: #FEFCF7;
+}
+
+/* section3 end  */
+
+.how-it-works {
+    margin-top: 200px;
+    padding-left: 95px;
+    width: 1045px;
+    height: 680px;
+}
+
+.works__titel {
+
+    font-family: 'Fraunces';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    /* identical to box height, or 133% */
+    color: #83888F;
+}
+
+.works__line {
+    margin-top: 95px;
+    margin-bottom: 82px;
+    width: 737px;
+    height: 1px;
+    border: 2px solid #FDD6BA;
+    position: relative;
+}
+
+.line__circle {
+    position: absolute;
+    top: -15px;
+    left: -5px;
+    width: 31px;
+    height: 31px;
+    background: #FEFCF7;
+    border: 2px solid #0E8784;
+    border-radius: 50%;
+}
+
+.line__circle--circle2 {
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    width: 31px;
+    height: 31px;
+    background: #FEFCF7;
+    border: 2px solid #0E8784;
+    border-radius: 50%;
+}
+
+.line__circle--circle3 {
+    position: absolute;
+    top: -15px;
+    left: 100%;
+    width: 31px;
+    height: 31px;
+    background: #FEFCF7;
+    border: 2px solid #0E8784;
+    border-radius: 50%;
+}
+
+.works__list {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 94px;
+}
+
+.works__item {
+    width: 285px;
+    height: 355px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+}
+
+.works__item--item1 {
+    padding-right: 20px;
+}
+
+.works__item--item2 {
+    margin: 0 95px;
+}
+
+.works__nomer {
+    font-family: 'Fraunces';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 72px;
+    /* identical to box height, or 100% */
+    color: #FDD6BA;
+}
+
+.works__title {
+    margin-top: 38px;
+    margin-bottom: 42px;
+    font-family: 'Fraunces';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 36px;
+    /* or 112% */
+    color: #333D4B;
+}
+
+.works__text {
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    /* or 162% */
+    color: #333D4B;
+}
+
+/* sectiop4 how-it-works end  */
+
+.footer {
+    margin-top: 200px;
+    padding-left: 95px;
+    width: 1280px;
+    height: 120px;
+    background: #2C343E;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+
+}
+
+.footer-logo-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.footer-logo-menu__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+
+}
+
+.footer-logo-menu__list {
+    margin-left: 130px;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+}
+
+.nav__item {
+    padding-top: 9px;
+}
+
+.nav__item--item2 {
+    margin-left: 33px;
+    margin-right: 32px;
+}
+
+
+.nav__link {
+    text-decoration: none;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height, or 125% */
+    letter-spacing: 0.923077px;
+    text-transform: uppercase;
+    color: #83888F;
+
+}
+
+.nav__link:hover {
+    color: #FEFCF7;
+}
+
+.icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.icon__link--link2 {
+    margin-left: 24px;
+    margin-right: 24px;
+}
+
+.icon__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.icon__img:hover {
+    background: #FDD6BA;
 }
