--- a/css/main.css
+++ b/css/main.css
@@ -481,6 +481,7 @@ body {
 
 .footer {
     margin-top: 200px;
+    margin-bottom: 88px;
     padding-left: 95px;
     width: 1280px;
     height: 120px;
