--- a/css/main.css
+++ b/css/main.css
@@ -36,12 +36,17 @@ body {
     margin: 0;
 }
 
+img {
+    vertical-align: middle;
+}
+
 .container {
     max-width: 1360px;
     margin: 0 auto;
     padding: 0 40px;
 
 }
+
 
 .header {
     display: -webkit-box;
@@ -61,6 +66,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-right: auto;
 }
 
 .navbar__list {
@@ -355,7 +361,7 @@ body {
 /* section3 end  */
 
 .how-it-works {
-    margin-top: 200px;
+    margin-top: 100px;
     padding-left: 95px;
     width: 1045px;
     height: 680px;
@@ -377,7 +383,7 @@ body {
     margin-bottom: 82px;
     width: 737px;
     height: 1px;
-    border: 2px solid #FDD6BA;
+    border: 1px solid #FDD6BA;
     position: relative;
 }
 
